--- a/app/src/main/res/values/urls.xml
+++ b/app/src/main/res/values/urls.xml
@@ -16,5 +16,5 @@
     <string name="url_release_note" translatable="false">https://sites.google.com/view/shima-app-release-note</string>
     <string name="url_release_note_en" translatable="false">https://sites.google.com/view/shima-app-release-note/english</string>
 
-    <string name="url_github_asset" translatable="false">https://github.com/okiislandsh/OKISchedule/tree/master/app/src/main/assets/%1$s</string>
+    <string name="url_github_asset" translatable="false">https://raw.githubusercontent.com/okiislandsh/OkiFerries/master/app/src/main/assets/%1$s</string>
 </resources>
